tests/transpiler/x/py/group_by_having.error
run: exit status 1
Traceback (most recent call last):
  File "/workspace/mochi/tests/transpiler/x/py/group_by_having.py", line 27, in <module>
    print(json.dumps(big, indent=2))
          ^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/root/.pyenv/versions/3.11.12/lib/python3.11/json/__init__.py", line 238, in dumps
    **kw).encode(obj)
          ^^^^^^^^^^^
  File "/root/.pyenv/versions/3.11.12/lib/python3.11/json/encoder.py", line 202, in encode
    chunks = list(chunks)
             ^^^^^^^^^^^^
  File "/root/.pyenv/versions/3.11.12/lib/python3.11/json/encoder.py", line 430, in _iterencode
    yield from _iterencode_list(o, _current_indent_level)
  File "/root/.pyenv/versions/3.11.12/lib/python3.11/json/encoder.py", line 326, in _iterencode_list
    yield from chunks
  File "/root/.pyenv/versions/3.11.12/lib/python3.11/json/encoder.py", line 439, in _iterencode
    o = _default(o)
        ^^^^^^^^^^^
  File "/root/.pyenv/versions/3.11.12/lib/python3.11/json/encoder.py", line 180, in default
    raise TypeError(f'Object of type {o.__class__.__name__} '
TypeError: Object of type Big is not JSON serializable
