tests/transpiler/x/py/group_by_having.py
# Code generated by Mochi v0.10.34 - DO NOT EDIT
from dataclasses import dataclass
from typing import List, Dict
import json

@dataclass
class People:
    name: str
    city: str

people = [People("Alice", "Paris"), People("Bob", "Hanoi"), People("Charlie", "Paris"), People("Diana", "Hanoi"), People("Eve", "Paris"), People("Frank", "Hanoi"), People("George", "Paris")]
@dataclass
class BigGroup:
    key: str
    items: list

_big_groups = {}
for p in people:
    _g = _big_groups.setdefault(p.city, BigGroup(p.city, []))
    _g.items.append(p)
@dataclass
class Big:
    city: str
    num: int

big = [Big(g.key, len(g.items)) for g in _big_groups.values()]
print(json.dumps(big, indent=2))
